Changed author email address

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Rok Grabnar",
-            "email": "grabnarrok@gmail.com"
+            "email": "rokgrabnar@hotmail.com"
         }
     ],
     "require": {
